search_pills: Fix subtle but serious alignment bug on user pills.

--- a/web/styles/search.css
+++ b/web/styles/search.css
@@ -245,7 +245,6 @@
 
         &.focused .user-pill-container {
             flex-flow: row wrap;
-            height: unset;
         }
 
         .user-pill-container {
@@ -257,6 +256,8 @@
                 width: fit-content;
                 /* Replaced by the 5px gap. */
                 margin-right: 0;
+                /* Don't inherit large line-height for user pill labels. */
+                line-height: 1;
             }
 
             .pill {
@@ -271,6 +272,9 @@
                 max-width: none;
                 display: grid;
                 grid-template-columns: auto 1fr auto;
+
+                /* Don't inherit large line-height for user pills themselves, either. */
+                line-height: 1;
 
                 &:not(.deactivated-pill) {
                     background-color: var(--color-background-user-pill);
